--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
+@import "~bootstrap/scss/bootstrap";
 @import "./partials/reset";
 @import "./partials/variables";
-@import "./partials/mixins";
 
 body {
   font-family: $font-family-text;
@@ -22,8 +22,6 @@ h6 {
 
 p {
   color: $medium-emphasis;
-  font-size: 14px;
-  line-height: 18px;
 }
 
 #root {
@@ -31,109 +29,9 @@ p {
   overflow: hidden;
 }
 
-.background-header {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-  &__vector {
-    position: absolute;
-    width: 72.4vw;
-    top: -7.8vw;
-    right: -22.4vw;
-  }
-  &__img {
-    position: absolute;
-    width: 39vw;
-    top: 0;
-    right: 0;
-  }
-}
-.background-footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  &__vector {
-    width: 100%;
-    top: 0;
-    right: 0;
-  }
-}
-
 #main {
   min-height: 100vh;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   max-width: 1025px;
-  margin-top: 23vw;
-  margin-bottom: 10vw;
-  padding: 0px 5vw;
-  gap: 10vw;
-}
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-  padding: 20px;
-}
-section {
-  width: 100%;
-  h2 {
-    font-family: $font-family-title;
-    font-size: 7vw;
-  }
-  h3 {
-    font-size: 3.8vw;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  #main {
-    margin-top: 10vw;
-  }
-  section {
-    h2 {
-      font-family: $font-family-title;
-      font-size: 4.2vw;
-    }
-    h3 {
-      font-size: 2.6vw;
-    }
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  #main {
-    margin-top: 120px;
-    padding: 0px 100px;
-    gap: 90px;
-  }
-  section {
-    h2 {
-      font-size: 40px;
-    }
-    h3 {
-      font-size: 20px;
-    }
-  }
-  p {
-    font-size: 18px;
-    line-height: 24px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .background {
-    &__vector {
-      width: 1039px;
-      top: -112px;
-      right: -322px;
-    }
-    &__img {
-      width: 560px;
-    }
-  }
+  margin-top: 60px;
 }
