--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,8 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
-
-$font-family-title: "Lora", sans-serif;
-$font-family-text: "Inter", sans-serif;
+$font-family-title: var(--font-lora), sans-serif;
+$font-family-text: var(--font-inter), sans-serif;
 
 // Light Mode Colors
 $primary-color: #1fc3cf;
