--- a/src/styles/partials/_reset.scss
+++ b/src/styles/partials/_reset.scss
@@ -66,10 +66,6 @@ main {
   display: block;
 }
 
-body {
-  line-height: 1;
-}
-
 ol,
 ul {
   list-style: none;
@@ -127,4 +123,8 @@ a img {
   border-style: none;
   border-color: #fff;
   background: transparent;
+}
+
+img {
+  width: 100%;
 }
