--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -1,5 +1,3 @@
-@use "../styles/partials/variables";
-
 $icon-size: 25px;
 
 .social {
@@ -29,7 +27,7 @@ $icon-size: 25px;
       text-decoration: none;
       &:hover,
       &.active {
-        color: variables.$primary-color;
+        color: var(--primary-color);
       }
     }
   }
@@ -59,7 +57,7 @@ $icon-size: 25px;
       width: $icon-size;
       gap: 10px;
       svg {
-        stroke: variables.$primary-color;
+        stroke: var(--primary-color);
       }
       &::after {
         content: "";
@@ -67,7 +65,7 @@ $icon-size: 25px;
         width: 2px;
         height: 90px;
         margin: 0px auto;
-        background-color: variables.$primary-color;
+        background-color: var(--primary-color);
       }
     }
   }
