--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,17 +2,33 @@ $font-family-title: var(--font-lora), sans-serif;
 $font-family-text: var(--font-inter), sans-serif;
 
 // Light Mode Colors
-$primary-color: #1fc3cf;
-$low-emphasis: #eff4f7;
-$medium-emphasis: #828282;
-$background-color: #fbfeff;
-$text-color: #25282b;
+$primary-color-light: #1fc3cf;
+$low-emphasis-light: #eff4f7;
+$medium-emphasis-light: #828282;
+$background-color-light: #fbfeff;
+$text-color-light: #25282b;
 
 // Dark Mode Colors
+$primary-color-dark: #1fc3cf;
+$low-emphasis-dark: #eff4f7;
+$medium-emphasis-dark: #828282;
+$background-color-dark: #121212;
+$text-color-dark: #e0e0e0;
+
+:root {
+  --primary-color: #{$primary-color-light};
+  --low-emphasis: #{$low-emphasis-light};
+  --medium-emphasis: #{$medium-emphasis-light};
+  --background-color: #{$background-color-light};
+  --text-color: #{$text-color-light};
+}
+
 @media (prefers-color-scheme: dark) {
-  $primary-color: #1fc3cf;
-  $low-emphasis: #eff4f7;
-  $medium-emphasis: #828282;
-  $background-color: #121212;
-  $text-color: #e0e0e0;
+  :root {
+    --primary-color: #{$primary-color-dark};
+    --low-emphasis: #{$low-emphasis-dark};
+    --medium-emphasis: #{$medium-emphasis-dark};
+    --background-color: #{$background-color-dark};
+    --text-color: #{$text-color-dark};
+  }
 }
