--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -1,13 +1,13 @@
 .container {
   height: 100vh;
   width: 100%;
-  position: fixed; // fixed位置に変更
   top: 0;
   left: 0;
-  background-color: #fff;
+  background-color: var(--background);
+  color: var(--foreground);
   z-index: 100;
   overflow: hidden;
-  will-change: transform; // パフォーマンス最適化
+  will-change: transform;
 }
 
 .icons {
