--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -46,6 +46,9 @@ $icon-size: 25px;
   }
 
   .socialContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: fixed;
     bottom: 0px;
     right: 3vw;
@@ -57,14 +60,10 @@ $icon-size: 25px;
       text-align: center;
       width: $icon-size;
       gap: 10px;
-      &::after {
-        content: "";
-        display: block;
-        width: 1.5px;
-        height: 90px;
-        margin: 0px auto;
-        background-color: var(--text-color);
-      }
+    }
+    .line {
+      margin-top: 10px;
+      height: 100px;
     }
   }
 }
