--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -11,7 +11,7 @@ $text-color-light: #121314;
 // Dark Mode Colors
 $primary-color-dark: #1fc3cf;
 $low-emphasis-dark: #eff4f7;
-$medium-emphasis-dark: #828282;
+$medium-emphasis-dark: #b6b6b6;
 $background-color-dark: #121212;
 $text-color-dark: #e0e0e0;
 
