--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -1,3 +1,5 @@
+@use "../styles/partials/variables" as variables;
+
 .container {
   height: 100vh;
   width: 100%;
@@ -17,32 +19,65 @@
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 1200px;
-  padding: 0 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap: 1rem;
+  margin: 0 4rem;
 
   .title {
     font-size: 4rem;
-    margin-bottom: 2rem;
     opacity: 0;
     transform: translateY(20px);
   }
 
   .role {
     font-size: 1.5rem;
-    margin-bottom: 0.5rem;
     opacity: 0;
     transform: translateY(20px);
+    line-height: 1.8rem;
   }
 
   .description {
     max-width: 480px;
-    line-height: 1.6;
     opacity: 0;
     transform: translateY(20px);
-    margin-top: 1rem;
-    margin-bottom: 2rem;
   }
 }
 
 .contact {
   opacity: 0;
+}
+
+@media (max-width: variables.$breakpoint-md) {
+  .content {
+    margin: 0 2rem;
+
+    .title {
+      font-size: 3rem;
+    }
+
+    .role {
+      font-size: 1.2rem;
+    }
+
+    .description {
+      max-width: 360px;
+    }
+  }
+}
+
+@media (max-width: variables.$breakpoint-sm) {
+  .content {
+    margin: 0 1rem;
+
+    .title {
+      font-size: 2.5rem;
+    }
+
+    .description {
+      max-width: 320px;
+    }
+  }
 }
