--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -7,8 +7,8 @@ $icon-size: 25px;
 @media screen and (min-width: 1025px) {
   .sidebarContainer {
     position: fixed;
-    left: 3vw;
-    top: 3vw;
+    left: 3rem;
+    top: 3rem;
     z-index: 1000;
   }
 
@@ -49,7 +49,7 @@ $icon-size: 25px;
     align-items: center;
     position: fixed;
     bottom: 0px;
-    right: 3vw;
+    right: 3rem;
     z-index: 1000;
 
     .social {
