add project detail

--- a/src/components/Experience.module.scss
+++ b/src/components/Experience.module.scss
@@ -6,7 +6,7 @@
 
 .experienceItem {
   padding: 1.5rem 0;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid var(--border-color);
 
   &:last-child {
     border-bottom: none;
