--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,6 +12,7 @@ $low-emphasis-light: #eff4f7;
 $medium-emphasis-light: #828282;
 $background-color-light: #fbfeff;
 $text-color-light: #121314;
+$border-color-light: #eaeaea;
 
 // Dark Mode Colors
 $primary-color-dark: #1fc3cf;
@@ -19,3 +20,4 @@ $low-emphasis-dark: #eff4f7;
 $medium-emphasis-dark: #b6b6b6;
 $background-color-dark: #121212;
 $text-color-dark: #e0e0e0;
+$border-color-dark: #2c2c2c;
