--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -121,7 +121,55 @@
   }
 }
 
+.imageContainer {
+  width: 100%;
+
+  .carouselWrapper {
+    display: block;
+  }
+
+  .verticalImageContainer {
+    display: none;
+  }
+
+  .carouselImage {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  .verticalImage {
+    margin-bottom: 1rem;
+    overflow: hidden;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
 // レスポンシブ対応
+@media (max-width: variables.$breakpoint-xl) {
+  .imageContainer {
+    .carouselWrapper {
+      display: none;
+    }
+
+    .verticalImageContainer {
+      display: block;
+    }
+  }
+
+  .projectInfo {
+    margin-bottom: 2rem;
+  }
+}
+
 @media (max-width: variables.$breakpoint-md) {
   .projectSection {
     padding: 4rem 0;
@@ -136,10 +184,6 @@
         height: 180px;
       }
     }
-  }
-
-  .projectInfo {
-    margin-bottom: 2rem;
   }
 
   .projectDescription {
