--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -37,7 +37,7 @@
       flex-wrap: wrap;
       gap: 0.5rem;
       span {
-        color: var(--primary-color);
+        color: var(--medium-emphasis);
         font-family: variables.$font-family-text;
         font-size: 0.9rem;
         font-weight: 500;
