--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -25,6 +25,7 @@ $icon-size: 25px;
       display: flex;
       align-items: center;
       text-decoration: none;
+      transition: color 0.3s ease;
       &:hover,
       &.active {
         color: var(--primary-color);
