--- a/src/components/SettingAppearance.module.scss
+++ b/src/components/SettingAppearance.module.scss
@@ -1,5 +1,23 @@
 @use "../styles/partials/variables" as variables;
 
+.settingAppearance {
+  display: flex;
+  gap: 1rem;
+  position: fixed;
+  top: 3rem;
+  right: 3rem;
+  z-index: 1000;
+}
+
+.themeToggle {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s ease;
+}
+
 .container {
   display: flex;
   gap: 1rem;
@@ -26,12 +44,14 @@
 }
 
 @media (max-width: variables.$breakpoint-md) {
+  .settingAppearance,
   .container {
     top: 2rem;
     right: 2rem;
   }
 }
 @media (max-width: variables.$breakpoint-sm) {
+  .settingAppearance,
   .container {
     top: 1.4rem;
     right: 1rem;
